2010-06-01  Kent Tamura  <tkent@chromium.org>

Reviewed by Shinichiro Hamaji.

        Fix style errors of dtoa
        https://bugs.webkit.org/show_bug.cgi?id=39972

        Fix all errors reported by check-webkit-style.

        * wtf/dtoa.cpp:
        * wtf/dtoa.h:

Canonical link: https://commits.webkit.org/51507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60468 268f45cc-cd09-0410-ab3c-d52691b4dbfc